# CppOR

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  Sampling  conanfile.txt  main.cpp  variadic-test
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
boost_folder/: boost_test.h
junior_practices/: CMakeCache.txt  CMakeLists.txt  MyClass.cpp  MyClass.h  Qmedia_test.cpp  boost_test.cpp  c_test.c  cmath_test.cpp  cmath_test.h  draw_QPainter_bar.cpp  draw_QPainter_line.cpp  draw_animation.cpp  draw_gnuplot.cpp  draw_gnuplot2.cpp  draw_matplot.cpp  draw_python.cpp  draw_python2.cpp  draw_pythonAPI_animation.cpp  draw_python_API.cpp  draw_qcustom.cpp  dynamic_2DArray.cpp  dynamic_2DArray.h  eigen3_test.cpp  fibonacci_test.cpp  fibonacci_test.h  fibonacci_test2.cpp  fibonacci_test2.h  fibonacci_test3.cpp  hash_c.cpp  main.moc  map_test.cpp  my_class.cpp  my_class.h  openMP_test.cpp  openMP_test2.cpp  pair_test.cpp  pybind_test.cpp  python_draw.cpp  qt_test.cpp  qt_test2.cpp  (+4 more)
junior_practices/SDL2_practices/: CMakeLists.txt  Color.cpp  Color.h  Piece.cpp  Piece.h  Tetris.cpp  Tetris.h  array_boundary_test.cpp  sdl2_test.cpp  tetris_main.cpp
junior_practices/qt_practices/: CMakeLists.txt  main.cpp  tetriswidget.cpp  tetriswidget.h
junior_practices/structure_algorithm/: linked_list.c
linear_programming/: CMakeLists.txt  gurobi_test.cpp
linear_programming/chen_solver/: CMakeLists.txt  Model.cpp  simplex.cpp  simplex.h  simplex.wasm
linear_programming/chen_solver2/: CMakeLists.txt  simplex.cpp  simplex.h
linear_programming/gurobi_examples/: CMakeLists.txt  mip1_c++.cpp
linear_programming/highs_test/: CMakeLists.txt  test_mps.cpp  test_sets.md
linear_programming/my_solver/: CMakeLists.txt  Var.cpp  main.cpp  simplex.cpp  simplex.h
linear_programming/sddp/: CMakeLists.txt  newsvendor_backorder.cpp  newsvendor_backorder.h  newsvendor_backorder_highs.cpp
linear_programming/sddp_overdraft/: CMakeLists.txt  I_cash_status.cpp  I_cash_status.h  common.cpp  common.h  double_product.cpp  double_product.h  double_product_enhancement.cpp  double_product_enhancement.h  double_product_enhancement_further.cpp  double_product_enhancement_further.h  double_product_testing.cpp  doule_product_enhancement_further.cpp  single_product.cpp  single_product.h  single_product_enhancement.cpp  single_product_enhancement.h  single_product_enhancement_further.cpp  single_product_enhancement_further.h  single_product_testing.cpp  single_product_testing_ScenarioNum.cpp  single_product_testing_iteration_num.cpp  single_product_testing_iteratonNum.cpp
linear_programming/solver1/: CMakeLists.txt  Model.h  Var.h  simplex.h
linear_programming/solver2/: CMakeLists.txt  simplex.cpp  simplex.h
linear_programming/solver3/: CMakeLists.txt  config.h  read_file.cpp  read_file.h  simplex.cpp  util.cpp  util.h
linear_programming/utils/: CMakeLists.txt  RemoveDuplicates.cpp  RemoveDuplicates.h  Sampling.cpp
machine_learning/: CMakeLists.txt  activation.h  back_propagation.cpp  back_propagation2.cpp  lstm.cpp  lstm1.cpp  network_pictures.md  perceptron.cpp  rnn.cpp  rnn_libtorch.cpp  simple_nn.cpp  simple_nn2.cpp  simple_rnn.cpp
machine_learning/data/: air_passengers.csv
prediction/: CMakeLists.txt  linear_regression.h  statistic_predict.cpp  statistic_predict.h
stochastic_inventory/: CMakeLists.txt  FindsS.cpp  FindsS.h  Newsvendor.cpp  Newsvendor.h  NewsvendorC.c  NewsvendorDP.cpp  NewsvendorDP.h  NewsvendorGrok.cpp  NewsvendorParallel.cpp  NewsvendorParallelGrok.cpp  NewsvendorParallel_async.cpp  PMF.cpp  PMF.h  ProbabilityMassFunctions.cpp  ProbabilityMassFunctions.h  State.cpp  State.h  newsvendor.cpp  newsvendor.h
stochastic_inventory/cash/: CMakeLists.txt  CashState.cpp  CashState.h  overdraftLeadtimeDoubleProduct.cpp  overdraftLeadtimeMultiProduct.cpp  overdraftLeadtimeSingleProduct.cpp  strongConstraint.cpp  strong_constraint.cpp
stochastic_inventory/cash/overdraft/: CMakeLists.txt  leadtime_double_product.cpp  leadtime_single_product.cpp  leadtime_single_product.h  leadtime_single_product_testing.cpp
stochastic_inventory/newsvendor/: CMakeLists.txt  heuristic1997.cpp  newsvendor.cpp  newsvendor.h  newsvendorC.c  newsvendorGrok.cpp  newsvendor_capacity.cpp  newsvendor_parallel.cpp  newsvendor_parallel_grok.cpp  newsvendor_vanilla.c  newsvendor_vanilla.cpp  newsvendor_vanilla.h  newsvendor_vanilla_newhash.cpp  newsvendor_vanilla_vector.cpp
stochastic_inventory/states/: CMakeLists.txt  CashLeadtimeMultiState.cpp  CashLeadtimeMultiState.h  CashLeadtimeState.cpp  CashLeadtimeState.h  CashState.cpp  CashState.h  State.cpp  cash_leadtime_multi_state.cpp  cash_leadtime_multi_state.h  cash_leadtime_state.cpp  cash_leadtime_state.h  cash_state.cpp  cash_state.h  cash_state_newhash.h  state.cpp  state.h
stochastic_inventory/workforce/: Binomial_conditional_expectation_test.cpp  Binomial_logconcave_test.cpp  Binomial_probability_decomposition_test.cpp  Binomial_stochastic_order_test.cpp  Binomial_tail_test.cpp  CMakeLists.txt  WorkerState.cpp  WorkerState.h  WorkforceState.cpp  WorkforceState.h  binomial_tail_product_test.cpp  binomial_test.cpp  normal_tail_product_test.cpp  piecewise.cpp  piecewise.h  util_binomial.cpp  util_binomial.h  worker_state.cpp  worker_state.h  workforce_plan.cpp  workforce_plan.h  workforce_testing_animation.cpp
tsp/: CMakeLists.txt  DP.cpp  branch_and_bound1.cpp  branch_and_bound2.cpp  tsp.h
utils/: CMakeLists.txt  Kconvexity.cpp  Kconvexity.h  PMF.cpp  PMF.h  Sampling.cpp  Sampling.h  common.cpp  common.h  draw_graph.cpp  draw_graph.h  fileOperations.cpp  file_operations.cpp  matplotlibcpp.h  pmf.cpp  pmf.h  removeDuplicates.cpp  removeDuplicates.h  sampling.cpp  sampling.h  selfHash.cpp  selfHash.h  self_hash.cpp
